<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/button_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:textSize="15.0sp"
            android:id="@+id/start_service"
            android:padding="2.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:text="@string/start"
            android:onClick="onClickStart" />

        <Button
            android:textSize="15.0sp"
            android:id="@+id/stop_service"
            android:padding="2.0dip"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:text="@string/stop"
            android:onClick="onClickStop" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_view">

        <Button
            android:textSize="15.0sp"
            android:id="@+id/clear_dist"
            android:padding="2.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/clear"
            android:onClick="onClickClear" />

        <Button
            android:id="@+id/settings"
            android:padding="2.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/setting"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@id/clear_dist"
            android:textSize="15.0sp"
            android:onClick="onClickSetting" />

        <Button
            android:id="@+id/instruction"
            android:padding="2.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/inst"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@id/settings"
            android:textSize="10.0sp"
            android:onClick="onClickInstructions" />
    </RelativeLayout>

    <TextView
        android:id="@+id/calibrate_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2.0dip"
        android:layout_below="@id/setting_layout"
        android:text="@string/calib_start"
        android:textColor="@color/black"
        android:textSize="20.0sp" />

    <ScrollView
        android:id="@+id/distance_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calibrate_text">
        <TextView
            android:id="@+id/distance_text_view"
            android:padding="2.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20.0sp"
            android:layout_alignParentStart="true" />

    </ScrollView>

    <TextView
        android:id="@+id/nav_inst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2.0dp"
        android:layout_below="@id/distance_scroll"
        android:layout_centerHorizontal="true"
        android:text="@string/nav_inst"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/nav_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_inst"
        android:layout_centerHorizontal="true"
        android:textSize="26sp"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@+id/linear_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/swipe_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorPrimaryDark"/>

    </LinearLayout>
</RelativeLayout>