<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.sanveg.smartstick.Settings">

    <TextView
        android:id="@+id/setting_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_margin_half"
        android:layout_centerHorizontal="true"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/user_name_label"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height"
        android:layout_below="@id/setting_label"
        android:layout_marginTop="@dimen/activity_margin_half"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_margin_half"
        android:layout_marginBottom="@dimen/activity_margin_half"
        android:paddingTop="10dp"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/user_name_edit"
        android:layout_width="200dp"
        android:layout_height="@dimen/height"
        android:layout_below="@id/setting_label"
        android:layout_toRightOf="@id/user_name_label"
        android:layout_marginTop="@dimen/activity_margin_half"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_margin_half"
        android:layout_marginBottom="@dimen/activity_margin_half"
        android:hint="@string/user_name_hint"
        android:padding="@dimen/padding"
        android:textColorHighlight="@color/colorPrimary"/>

    <ScrollView
        android:id="@+id/contacts_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name_label">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_one_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin_half"
                android:layout_marginLeft="@dimen/activity_margin_half"
                android:layout_marginRight="@dimen/activity_margin_half"
                android:layout_centerHorizontal="true"
                android:text="@string/emg_1"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/black" />

            <include android:id="@+id/det_one"
                layout="@layout/emergency_contact"
                />

            <TextView
                android:id="@+id/contact_two_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin_half"
                android:layout_marginLeft="@dimen/activity_margin_half"
                android:layout_marginRight="@dimen/activity_margin_half"
                android:layout_centerHorizontal="true"
                android:text="@string/emg_2"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/black" />

            <include android:id="@+id/det_two"
                layout="@layout/emergency_contact"
                />

            <TextView
                android:id="@+id/contact_three_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin_half"
                android:layout_marginLeft="@dimen/activity_margin_half"
                android:layout_marginRight="@dimen/activity_margin_half"
                android:layout_centerHorizontal="true"
                android:text="@string/emg_3"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/black" />

            <include android:id="@+id/det_three"
                layout="@layout/emergency_contact"
                />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_below="@id/contacts_scroll"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/save"
        android:textColor="@color/black"/>
</RelativeLayout>
